cmake_minimum_required(VERSION 3.29)
project(CPP_Primer_Plus)

set(CMAKE_CXX_STANDARD 20)

add_executable(CPP_Primer_Plus main.cpp
        head.h
        src/chapter_12/chapter_12_main.cpp
        src/chapter_12/chapter_12_head.h
        src/chapter_12/string_bad.h
        src/chapter_12/string_bad.cpp
        src/chapter_12/vegNews.cpp
        src/chapter_10/chapter_10_main.cpp
        src/chapter_10/chapter_10_head.h
        src/chapter_10/stock20.cpp
        src/chapter_10/stock20.h
        src/chapter_10/useStock2.cpp
        src/chapter_11/myTime0.h
        src/chapter_11/chapter_11_main.cpp
        src/chapter_11/chapter_11_head.h
        src/chapter_11/myTime0.cpp
        src/chapter_11/sueTime0.cpp
        src/chapter_11/myTime1.cpp
        src/chapter_11/myTime1.h
        src/chapter_11/useTime1.cpp
        src/chapter_11/myTime2.cpp
        src/chapter_11/myTime2.h
        src/chapter_11/useTime2.cpp
        src/chapter_11/myTime3.cpp
        src/chapter_11/myTime3.h
        src/chapter_11/useTime3.cpp
        src/chapter_11/vector.cpp
        src/chapter_11/vector.h
        src/chapter_11/rand_walk.cpp
        src/chapter_11/stoneWT.h
        src/chapter_11/stoneWT.cpp
        src/chapter_11/stone.cpp
        src/chapter_12/sayings1.cpp
        src/chapter_12/sayings2.cpp
        src/chapter_12/string1.cpp
        src/chapter_12/string_NOT_bad.cpp
        src/chapter_12/string_NOT_bad.h
        src/chapter_13/chapter_13_head.h
        src/chapter_13/chapter_13_main.cpp
        src/chapter_13/tab_tenn1.cpp
        src/chapter_13/tab_tenn1.h
        src/chapter_13/use_tt1.cpp
        src/chapter_2/02.01_myfirst.cpp
        src/chapter_2/02.02_carrots.cpp
        src/chapter_2/02.03_getinfo.cpp
        src/chapter_2/02.04_sqrt.cpp
        src/chapter_2/02.05_ourfunc.cpp
        src/chapter_2/02.06_convert.cpp
        src/chapter_2/chapter_2_head.h
        src/chapter_2/chapter_2_main.cpp
        src/chapter_2/Test_1.cpp
        src/chapter_2/Test_2.cpp
        src/chapter_2/Test_3.cpp
        src/chapter_2/Test_4.cpp
        src/chapter_2/Test_5.cpp
        src/chapter_2/Test_6.cpp
        src/chapter_2/Test_7.cpp
        src/chapter_3/03.01_limits.cpp
        src/chapter_3/03.02_exceed.cpp
        src/chapter_3/03.03_hexoct1.cpp
        src/chapter_3/03.04_hexoct2.cpp
        src/chapter_3/03.05_chartype.cpp
        src/chapter_3/03.06_morechar.cpp
        src/chapter_3/03.07_bondini.cpp
        src/chapter_3/03.08_floatnum.cpp
        src/chapter_3/03.09_fltadd.cpp
        src/chapter_3/03.10_arith.cpp
        src/chapter_3/03.11_divide.cpp
        src/chapter_3/03.12_modulus.cpp
        src/chapter_3/03.13_assign.cpp
        src/chapter_3/03.14_typecast.cpp
        src/chapter_3/exercise_1.cpp
        src/chapter_3/exercise_2.cpp
        src/chapter_3/exercise_3.cpp
        src/chapter_3/exercise_4.cpp
        src/chapter_3/exercise_5.cpp
        src/chapter_3/exercise_6.cpp
        src/chapter_3/exercise_7.cpp
        src/chapter_3/chapter_3_head.h
        src/chapter_3/chapter_3_main.cpp
        src/chapter_4/04.01_arrayone.cpp
        src/chapter_4/04.02_string.cpp
        src/chapter_4/04.03_instr1.cpp
        src/chapter_4/04.04_instr2.cpp
        src/chapter_4/04.05_instr3.cpp
        src/chapter_4/04.06_numstr.cpp
        src/chapter_4/04.07_strtype1.cpp
        src/chapter_4/04.08_strtype2.cpp
        src/chapter_4/04.09_strtype3.cpp
        src/chapter_4/04.10_strtype4.cpp
        src/chapter_4/04.11_structur.cpp
        src/chapter_4/04.12_assgn_st.cpp
        src/chapter_4/04.13_arrstruc.cpp
        src/chapter_4/04.14_address.cpp
        src/chapter_4/04.15_pointer.cpp
        src/chapter_4/04.16_init_ptr.cpp
        src/chapter_4/04.17_use_new.cpp
        src/chapter_4/04.18_arraynew.cpp
        src/chapter_4/04.19_addpntrs.cpp
        src/chapter_4/04.20_ptrstr.cpp
        src/chapter_4/04.21_newstrct.cpp
        src/chapter_4/04.22_dalete.cpp
        src/chapter_4/04.23_mixtypes.cpp
        src/chapter_4/04.24_choices.cpp
        src/chapter_4/chapter_4_head.h
        src/chapter_4/chapter_4_main.cpp
        src/chapter_4/practice_1.cpp
        src/chapter_4/practice_2.cpp
        src/chapter_4/practice_3.cpp
        src/chapter_4/practice_4.cpp
        src/chapter_4/practice_5.cpp
        src/chapter_4/practice_6.cpp
        src/chapter_4/practice_7.cpp
        src/chapter_4/practice_8.cpp
        src/chapter_4/practice_9.cpp
        src/chapter_4/practice_10.cpp

)
