cmake_minimum_required(VERSION 3.29)
project(CPP_Primer_Plus)

set(CMAKE_CXX_STANDARD 20)

add_executable(Code main.cpp)
add_executable(CPP_Primer_Plus main.cpp
        head.h
        #[[
        src/chapter_12/Code/sayings1.cpp
        src/chapter_12/Code/sayings2.cpp
        src/chapter_12/Code/string1.cpp
        src/chapter_12/Code/string_NOT_bad.cpp
        src/chapter_12/Code/string_NOT_bad.h
        src/chapter_13/chapter_13_head.h
        src/chapter_13/chapter_13_main.cpp
        src/chapter_13/Code/tab_tenn1.cpp
        src/chapter_13/Code/tab_tenn1.h
        src/chapter_13/Code/use_tt1.cpp
        ]]
        # **********chapter 2**********
        #[[
        src/chapter_2/code/02.01_myfirst.cpp
        src/chapter_2/code/02.02_carrots.cpp
        src/chapter_2/code/02.03_getinfo.cpp
        src/chapter_2/code/02.04_sqrt.cpp
        src/chapter_2/code/02.05_ourfunc.cpp
        src/chapter_2/code/02.06_convert.cpp
        src/chapter_2/chapter_2_head.h
        src/chapter_2/chapter_2_main.cpp
        src/chapter_2/Practice/Test_1.cpp
        src/chapter_2/Practice/Test_2.cpp
        src/chapter_2/Practice/Test_3.cpp
        src/chapter_2/Practice/Test_4.cpp
        src/chapter_2/Practice/Test_5.cpp
        src/chapter_2/Practice/Test_6.cpp
        src/chapter_2/Practice/Test_7.cpp
        ]]
        # **********chapter 3**********
        #[[
        src/chapter_3/Code/03.01_limits.cpp
        src/chapter_3/Code/03.02_exceed.cpp
        src/chapter_3/Code/03.03_hexoct1.cpp
        src/chapter_3/Code/03.04_hexoct2.cpp
        src/chapter_3/Code/03.05_chartype.cpp
        src/chapter_3/Code/03.06_morechar.cpp
        src/chapter_3/Code/03.07_bondini.cpp
        src/chapter_3/Code/03.08_floatnum.cpp
        src/chapter_3/Code/03.09_fltadd.cpp
        src/chapter_3/Code/03.10_arith.cpp
        src/chapter_3/Code/03.11_divide.cpp
        src/chapter_3/Code/03.12_modulus.cpp
        src/chapter_3/Code/03.13_assign.cpp
        src/chapter_3/Code/03.14_typecast.cpp
        src/chapter_3/Practice/exercise_1.cpp
        src/chapter_3/Practice/exercise_2.cpp
        src/chapter_3/Practice/exercise_3.cpp
        src/chapter_3/Practice/exercise_4.cpp
        src/chapter_3/Practice/exercise_5.cpp
        src/chapter_3/Practice/exercise_6.cpp
        src/chapter_3/Practice/exercise_7.cpp
        src/chapter_3/chapter_3_head.h
        src/chapter_3/chapter_3_main.cpp
        ]]
        # **********chapter 4**********
        #[[
        src/chapter_4/Code/04.01_arrayone.cpp
        src/chapter_4/Code/04.02_string.cpp
        src/chapter_4/Code/04.03_instr1.cpp
        src/chapter_4/Code/04.04_instr2.cpp
        src/chapter_4/Code/04.05_instr3.cpp
        src/chapter_4/Code/04.06_numstr.cpp
        src/chapter_4/Code/04.07_strtype1.cpp
        src/chapter_4/Code/04.08_strtype2.cpp
        src/chapter_4/Code/04.09_strtype3.cpp
        src/chapter_4/Code/04.10_strtype4.cpp
        src/chapter_4/Code/04.11_structur.cpp
        src/chapter_4/Code/04.12_assgn_st.cpp
        src/chapter_4/Code/04.13_arrstruc.cpp
        src/chapter_4/Code/04.14_address.cpp
        src/chapter_4/Code/04.15_pointer.cpp
        src/chapter_4/Code/04.16_init_ptr.cpp
        src/chapter_4/Code/04.17_use_new.cpp
        src/chapter_4/Code/04.18_arraynew.cpp
        src/chapter_4/Code/04.19_addpntrs.cpp
        src/chapter_4/Code/04.20_ptrstr.cpp
        src/chapter_4/Code/04.21_newstrct.cpp
        src/chapter_4/Code/04.22_dalete.cpp
        src/chapter_4/Code/04.23_mixtypes.cpp
        src/chapter_4/Code/04.24_choices.cpp
        src/chapter_4/chapter_4_head.h
        src/chapter_4/chapter_4_main.cpp
        src/chapter_4/Practice/practice_1.cpp
        src/chapter_4/Practice/practice_2.cpp
        src/chapter_4/Practice/practice_3.cpp
        src/chapter_4/Practice/practice_4.cpp
        src/chapter_4/Practice/practice_5.cpp
        src/chapter_4/Practice/practice_6.cpp
        src/chapter_4/Practice/practice_7.cpp
        src/chapter_4/Practice/practice_8.cpp
        src/chapter_4/Practice/practice_9.cpp
        src/chapter_4/Practice/practice_10.cpp
        ]]
        # **********chapter 5**********
        #[[
        src/chapter_5/Code/05.01_forloop.cpp
        src/chapter_5/Code/05.02_num_test.cpp
        src/chapter_5/Code/05.03_express.cpp
        src/chapter_5/Code/05.04_formore.cpp
        src/chapter_5/Code/05.05_bigstep.cpp
        src/chapter_5/Code/05.06_forstr1.cpp
        src/chapter_5/Code/05.07_plus_one.cpp
        src/chapter_5/Code/05.08_block.cpp
        src/chapter_5/Code/05.09_forstr2.cpp
        src/chapter_5/Code/05.10_equal.cpp
        src/chapter_5/Code/05.11_compstr1.cpp
        src/chapter_5/Code/05.12_compstr2.cpp
        src/chapter_5/Code/05.13_while.cpp
        src/chapter_5/Code/05.14_waiting.cpp
        src/chapter_5/Code/05.15_dowhile.cpp
        src/chapter_5/Code/05.16_textin1.cpp
        src/chapter_5/Code/05.17_textin2.cpp
        src/chapter_5/Code/05.18_textin3.cpp
        src/chapter_5/Code/05.19_textin4.cpp
        src/chapter_5/Code/05.20_nested.cpp
        src/chapter_5/chapter_5_head.h
        src/chapter_5/chapter_5_main.cpp
        src/chapter_5/Practice/05.01.cpp
        src/chapter_5/Practice/05.02.cpp
        src/chapter_5/Practice/05.03.cpp
        src/chapter_5/Practice/05.04.cpp
        src/chapter_5/Practice/05.05.cpp
        src/chapter_5/Practice/05.06.cpp
        src/chapter_5/Practice/05.07.cpp
        src/chapter_5/Practice/05.08.cpp
        src/chapter_5/Practice/05.09.cpp
        src/chapter_5/Practice/05.10.cpp
        ]]
        # **********chapter 6**********
        #[[
        src/chapter_6/chapter_6_head.h
        src/chapter_6/chapter_6_main.cpp
        src/chapter_6/Code/06_01_if.cpp
        src/chapter_6/Code/06_02_ifelse.cpp
        src/chapter_6/Code/06_03_ifelseif.cpp
        src/chapter_6/Code/06_04_or.cpp
        src/chapter_6/Code/06_05_and.cpp
        src/chapter_6/Code/06_06_more_and.cpp
        src/chapter_6/Code/06_07_not.cpp
        src/chapter_6/Code/06_08_cctypes.cpp
        src/chapter_6/Code/06_09_condit.cpp
        src/chapter_6/Code/06_10_switch.cpp
        src/chapter_6/Code/06_11_enum.cpp
        src/chapter_6/Code/06_12_jump.cpp
        src/chapter_6/Code/06_13_cinFish.cpp
        src/chapter_6/Code/06_14_cinGolf.cpp
        src/chapter_6/Code/06_15_outFile.cpp
        src/chapter_6/Code/06_16_sumFile.cpp
        src/chapter_6/Practice/06_01.cpp
        src/chapter_6/Practice/06_02.cpp
        src/chapter_6/Practice/06_03.cpp
        src/chapter_6/Practice/06_04.cpp
        src/chapter_6/Practice/06_05.cpp
        src/chapter_6/Practice/06_06.cpp
        src/chapter_6/Practice/06_07.cpp
        src/chapter_6/Practice/06_08.cpp
        src/chapter_6/Practice/06_09.cpp
        ]]
        # **********chapter 7**********
#        [[
        src/chapter_7/chapter_7_head.h
        src/chapter_7/chapter_7_main.cpp
        src/chapter_7/Code/07_01_calling.cpp
        src/chapter_7/Code/07_02_protos.cpp
        src/chapter_7/Code/07_03_twoArg.cpp
        src/chapter_7/Code/07_04_lotto.cpp
        src/chapter_7/Code/07_05_arrFun_1.cpp
        src/chapter_7/Code/07_06_arrFun_2.cpp
        src/chapter_7/Code/07_07_arrFun_3.cpp
        src/chapter_7/Code/07_08_arrFun_4.cpp
        src/chapter_7/Code/07_09_strgfun.cpp
        src/chapter_7/Code/07_10_strgback.cpp
        src/chapter_7/Code/07_11_travel.cpp
        src/chapter_7/Code/07_12_strctfun.cpp
        src/chapter_7/Code/07_13_strctptr.cpp
        src/chapter_7/Code/07_14_topfive.cpp
        src/chapter_7/Code/07_15_arrobj.cpp
        src/chapter_7/Code/07_16_recur.cpp
        src/chapter_7/Code/07_17_ruler.cpp
        src/chapter_7/Code/07_18_fun_ptr.cpp
        src/chapter_7/Code/07_19_arfupt.cpp
        src/chapter_7/Practice/practice_1.cpp
        src/chapter_7/Practice/practice_2.cpp

        # **********chapter 8**********
        #[[
        src/chapter_8/chapter_8_head.h
        src/chapter_8/chapter_8_main.cpp
        src/chapter_8/Code/08_01_inline.cpp
        src/chapter_8/Code/08_09_left.cpp
        src/chapter_8/Code/08_10_leftOver.cpp
        ]]
        # **********chapter 9**********

        # **********chapter 10**********
        #[[
        src/chapter_10/chapter_10_main.cpp
        src/chapter_10/chapter_10_head.h
        src/chapter_10/Code/1001_stock00.h
        src/chapter_10/Code/1002_stock00.cpp
        src/chapter_10/Code/1003_useStock0.cpp
        src/chapter_10/Code/1004_stock10.h
        src/chapter_10/Code/1005_stock10.cpp
        src/chapter_10/Code/1006_useStock1.cpp
        src/chapter_10/Code/1007_stock20.h
        src/chapter_10/Code/1008_stock20.cpp
        src/chapter_10/Code/1009_useStock2.cpp
        ]]
        # **********chapter 11**********
        #[[
        src/chapter_11/chapter_11_main.cpp
        src/chapter_11/chapter_11_head.h
        src/chapter_11/Code/1101_myTime0.h
        src/chapter_11/Code/1102_myTime0.cpp
        src/chapter_11/Code/1103_useTime0.cpp
        src/chapter_11/Code/1105_myTime1.cpp
        src/chapter_11/Code/1104_myTime1.h
        src/chapter_11/Code/1106_useTime1.cpp
        src/chapter_11/Code/1108_myTime2.cpp
        src/chapter_11/Code/1107_myTime2.h
        src/chapter_11/Code/1109_useTime2.cpp
        src/chapter_11/Code/1111_myTime3.cpp
        src/chapter_11/Code/1110_myTime3.h
        src/chapter_11/Code/1112_useTime3.cpp
        src/chapter_11/Code/1114_vector.cpp
        src/chapter_11/Code/1113_vector.h
        src/chapter_11/Code/1115_rand_walk.cpp
        src/chapter_11/Code/1116_stoneWT.h
        src/chapter_11/Code/1117_stoneWT.cpp
        src/chapter_11/Code/1118_stone.cpp
        ]]
        # **********chapter 12**********
        #[[
        src/chapter_12/chapter_12_main.cpp
        src/chapter_12/chapter_12_head.h
        src/chapter_12/Code/string_bad.h
        src/chapter_12/Code/string_bad.cpp
        src/chapter_12/Code/vegNews.cpp
        ]]


)
